# POS

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  CLERK_STAFF_FLOW_FIXES.md  DEPLOY_STEPS.md  GITHUB_DEPLOY.md  LICENSE  PROGRESS.md  RAILWAY_COMMANDS.md  RAILWAY_DEPLOYMENT.md  RAILWAY_GITHUB_QUICKSTART.md  README.md  SUPABASE_INTEGRATION.md  docker-compose.yml  nixpacks.toml  package-lock.json  package.json  railway.json  turbo.json  vercel.json
.github/workflows/: build-installers.yml  build-windows.yml
apps/customer-web/: index.html  package.json  vite.config.ts
apps/customer-web/src/: App.tsx  index.css  main.tsx
apps/desktop/: nginx.railway.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: index.css  main.tsx  routeTree.gen.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/hardware/: cash_drawer.rs  mod.rs  printer.rs  raw_print.ps1  scanner.rs
apps/desktop/src/api/: client.ts
backend/: Dockerfile  main.go
backend/internal/api/: routes.go
backend/internal/handlers/: auth.go  clerk_webhooks.go  combos.go  customer_ordering.go  customers.go  media.go  options.go  orders.go  payments.go  products.go  promos.go  qr_codes.go  settings.go  tables.go  tenants.go  variations.go  webhooks.go
backend/internal/middleware/: auth.go  tenant.go  webhook_auth.go
backend/internal/models/: models.go
scripts/: publish-update.mjs
(+206 files in other folders)
